Fix layout bugs

--- a/template/src/scss/styles.scss
+++ b/template/src/scss/styles.scss
@@ -82,7 +82,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 
     width: 100%;
     height: 100%;
@@ -97,6 +97,7 @@ body{
     width: 290px;
     height: 40px;
     margin-top: 30px;
+    // margin-bottom: 30px; // Safari fix
 
     transition: 1s ease-in-out,
                 opacity 500ms ease-in-out,
@@ -140,6 +141,7 @@ body{
         border-radius: 3px 0 0 3px;
 
         font-size: 20px;
+        font-weight: 300;
 
         &:hover{
             border: 1px solid #B9B9B9;
@@ -200,21 +202,19 @@ body{
 }
 
 .search-result{
-    width: 100%;
 
     &-item{
         width: 90%;
         height: auto;
 
-        margin: 20px auto;
-        padding: 15px;
-        padding-left: 20px;
+        margin: 30px auto;
 
         transition: box-shadow 250ms 3.38295ms;
 
         background-color: $default-text-color;
 
         color: #000;
+        font-weight: 100;
 
         &--random-article{
             @include card(2);
@@ -247,7 +247,8 @@ body{
         &__title{
             padding-bottom: 10px;
 
-            font-weight: 100;
+            font-size: 1.7em;
+            font-weight: inherit;
         }
     }
 }
